feat: comprehensive quiz management overhaul — SOTA Canvas/Moodle patterns
Student quiz-taking:
- Question navigation: scrollIntoView for sidebar click in review mode
- lockAt/availableFrom frontend guards at preflight level
- doStartAttempt error propagation fix (QUIZ_LOCKED no longer swallowed)
- Password quiz flow verified E2E

Quiz result page:
- Coursera-style 2-column layout (score card + question breakdown)
- Progressive disclosure pagination (10 questions, "show more")
- pendingReview state ("Chưa công bố điểm" when showResultsImmediately=false)
- Left border-l indicators for correct/incorrect questions

Student gradebook (/student/results):
- VMU-inspired table redesign: columns Bài | Loại | Điểm | Kết quả
- Grouped by course with table headers
- "Xem" links to quiz result with returnUrl preservation

Tab navigation:
- returnUrl includes ?tab=quizzes for quiz-related navigation
- Student assignments page reads tab query param on init

Teacher quiz management:
- Quiz list: dropdown status filter → button tabs (Tất cả/Đang mở/Nháp/Hết hạn)
- Quiz detail: toggle "Công bố điểm"/"Ẩn điểm" 1-click on header
- Quiz results tab: enrolled students merged (Canvas "Chưa làm" pattern)
- Quiz results tab: "Xóa" attempt button (Canvas Moderate Quiz)
- Quiz details tab: full implementation from stub (settings, schedule, status)
- Quiz audit log tab: timeline from existing data (lifecycle + attempt events)
- Quiz edit labels: clearer Vietnamese ("Công bố điểm ngay sau nộp")

Backend:
- DELETE /quizzes/attempts/{id} — teacher moderation endpoint
- GET /quizzes/{id}/enrolled-students — Canvas enrolled view
- Gated result map: showResultsImmediately hides score (Canvas/Google Forms)
- Student grades: bestAttemptId, isPassed, maxScore fix
- questionCount: COUNT query replacing Hibernate collection access
- Video HLS 500: catch NoSuchKeyException → 404

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>